   Don't check disk status for files which are marked to be ignored.
   Reset file disk status when manually reloading a file.
   Various improvements to the GIO-based file disk checking code.
 * src/document.c, src/keyfile.c, src/search.c, src/tools.c,
   src/utils.c, src/vte.c, tagmanager/tm_source_file.c:
   Replace remaining occurrences of '__func__' with 'G_STRFUNC'.


2009-01-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/treeviews.c:
   Disable documents popup menu items when invalid.
   Make close, save menu items work for all children when a parent row
   is selected.
 * src/notebook.c:
   Fix focusing the editor after clicking on a notebook tab.


2009-01-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c, src/utils.c:
   Skip disk changes detection for all remote files.
   Don't try to detect a remote file when running on old GLib versions
   without GIO (< 2.16).


2009-01-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/ui_utils.h, src/prefs.c, src/plugindata.h,
   src/treeviews.c, src/keyfile.c, geany.glade:
   Use tree for Documents sidebar, grouped by path.
   Remove Documents show full path pref.
   Use enum for documents tree store column ids.


2009-01-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/utils.c: Added a missing g_free().


2009-01-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetype_extensions.conf, data/filetypes.oms,
   scintilla/include/SciLexer.h, scintilla/include/Scintilla.iface,
   scintilla/KeyWords.cxx, scintilla/LexOMS.cxx, scintilla/Makefile.am,
   scintilla/makefile.win32, src/editor.c, src/filetypes.c,
   src/filetypes.h, src/highlighting.c, src/templates.c, wscript:
   Remove filetype O-Matrix (probably unused for years).
 * src/keybindings.c, src/keybindings.h:
   Reorder some keybindings.
 * src/dialogs.c, src/document.c, src/document.h, src/documentprivate.h,